# cpptradingbot

./: CMakeLists.txt  README.md
include/: Algo.h  AlgoOrders.h  DvfSimulator.h
src/: Algo.cpp  AlgoOrders.cpp  Main.cpp
tests/: UnitTests.cpp
